--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 <body>
     <h1>Teddy-TODO List</h1>
 
-    <!-- populate todo data here -->
+    <ul id="todo-list">
 
+    <!-- populate todo data here -->
     <script src="./script.js"></script>
 </body>
 </html>
+
